[package]
name = "vanikey"
version = "0.1.0"
authors = ["Curtis Knudson <stomps.wikis_8t@icloud.com>"]
edition = "2021"
description = "A simple command-line vanity npub generator for Nostr"
license = "MIT"
repository = "https://github.com/curtisknudson/vanikey"
categories = ["command-line-utilities"]

[dependencies]
bech32 = "0.9.1"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
rand_core = "0.6.4"
secp256k1 = { version = "0.27.0", features = ["rand"] }
